<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/config_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title"
        android:text="@string/config_activity_title"
        style="@style/title"
        />
    <EditText
        android:id="@+id/e_text_hostname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/config_activity_title"
        android:layout_marginTop="@dimen/margin_xxl"
        android:hint="@string/e_text_hostname"
        style="@style/editText"

        />
    <EditText
        android:id="@+id/e_text_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/e_text_hostname"
        android:layout_marginTop="@dimen/margin_xl"
        android:hint="@string/e_text_ip"
        style="@style/editText"

        />
    <EditText
        android:id="@+id/e_text_Port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/e_text_ip"
        android:layout_marginTop="@dimen/margin_xxl"
        android:hint="@string/e_text_Port"
        android:inputType="number"
        style="@style/editText"


        />
    <Button
        android:id="@+id/btn_save_config"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_l"
        android:layout_marginRight="@dimen/margin_l"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxl"
        android:text="@string/btn_submit_config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_text_Port"
        style="@style/Widget.AppCompat.Button.Colored"
        />


</androidx.constraintlayout.widget.ConstraintLayout>